--- a/CSGO-GEN-WebAssembly/wwwroot/index.html
+++ b/CSGO-GEN-WebAssembly/wwwroot/index.html
@@ -12,7 +12,7 @@
     <link href="css/app.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="CSGO-GEN-WebAssembly.styles.css" rel="stylesheet" />
-    <title>CS2 Gencode Generator</title>
+    <title>Helios !ws !knife Komutları</title>
     <link rel="shortcut icon" href="./assets/img/favicon.png">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -28,8 +28,8 @@
     </div>
 
     <div id="blazor-error-ui">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
+        yüklenemedi
+        <a href="" class="reload">yenile</a>
         <a class="dismiss">🗙</a>
     </div>
 
